--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 body {
     background-color: #FFFBEB;
     color: black;
-    font-family: 'Karla'; font-size: 20;
+    font-family: 'Karla'; font-size: 20px;
     font-weight: Regular;
     display:flex;
     justify-content: center;
@@ -11,14 +11,14 @@ body {
 }
 
 h1 {
-    font-size: 40;
+    font-size: 40px;
     font-weight:800;
     margin-bottom: 0px;
 }
 
 p {
-    margin-top: 5px;
-    margin-bottom: 40px;
+    margin-top: 0px;
+    margin-bottom: 5px;
     color: #6B7280;
 }
 
@@ -27,19 +27,64 @@ p {
 }
 
 #copy-password-text {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     margin-top:0px;
     padding: 0px;
     box-sizing: border-box;
     height: 20px;
 }
 
+.number-field {
+    margin-top: 0px;
+    margin-bottom: 20px;
+    width: 200px;
+    height: 29px;
+    display: flex;
+    justify-content:start;
+    align-items: center;
+    border-bottom: 1px solid #D5D4D8;
+}
+
+.number-field-dark {
+    border-bottom: 1px solid #2F3E53;
+}
+
+.number-input {
+    width: 35px;
+    height: 24px;
+    margin-left: 10px;
+    border: none;
+    text-align: center;
+    font-family:'Karla';
+    font-size: 20px;
+    font-weight:500;
+    background-color: #ECFDF5;
+    color: #6B7280;
+}
+
+.number-input-dark {
+    background-color:#1F2937;
+    color:#D5D4D8;
+}
+
+.password-length-text {
+    height: 19px;
+    color: #6B7280;
+}
+
+.password-length-text-dark {
+    color: #D5D4D8;
+}
+
+
+
+
 .body-div {
     background-color: #ECFDF5;
     border: 5px solid #064E3B;
     border-radius: 20px;
     color: black;
-    font-family: 'Karla'; font-size: 22;
+    font-family: 'Karla'; font-size: 18px;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -60,7 +105,7 @@ button {
     color: white;
     border: none;
     border-radius: 5px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     height: 50px;
     width: 250px;
     font-weight:900;
@@ -89,9 +134,6 @@ button:hover {
     height: 29px;
     background-color: #1F2937;
     color: #D5D4D8;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
     font-weight:900;
 }
 
@@ -119,7 +161,7 @@ button:hover {
 
 .generated-password-block-dark {
     border-top: 1px solid #2F3E53; 
-    margin: 0px;
+    margin-top: 0px;
     padding: 0px;
 }
 
