--- a/index.css
+++ b/index.css
@@ -35,36 +35,38 @@ p {
 }
 
 .number-field {
-    margin-top: 0px;
-    margin-bottom: 20px;
+    margin-top: 15px;
+    margin-bottom: 25px;
     width: 200px;
     height: 29px;
     display: flex;
     justify-content:start;
     align-items: center;
-    border-bottom: 1px solid #D5D4D8;
+    border-radius: 10px;
+    padding: 0px 15px 0px 55px;
 }
 
 .number-field-dark {
-    border-bottom: 1px solid #2F3E53;
+    border-radius: 10px;
 }
 
 .number-input {
-    width: 35px;
-    height: 24px;
-    margin-left: 10px;
-    border: none;
+    width: 45px;
+    height: 30px;
+    margin-left: 6px;
+    border:none;
+    border-radius: 5px;
     text-align: center;
     font-family:'Karla';
     font-size: 20px;
     font-weight:500;
-    background-color: #ECFDF5;
-    color: #6B7280;
+    background-color: #10B981;
+    color: white;
 }
 
 .number-input-dark {
-    background-color:#1F2937;
-    color:#D5D4D8;
+    background-color:#10B981;
+    color:white;;
 }
 
 .password-length-text {
@@ -76,13 +78,26 @@ p {
     color: #D5D4D8;
 }
 
+.alternative-text {
+    color: #6B7280;
+}
 
+.alternative-text-dark {
+    color: #D5D4D8;
+}
 
+.alternative-text-two {
+    color: #6B7280;
+}
+
+.alternative-text-two-dark {
+    color: #D5D4D8;
+}
 
 .body-div {
     background-color: #ECFDF5;
-    border: 5px solid #064E3B;
-    border-radius: 20px;
+    border: 3px solid #1F2937;
+    border-radius: 10px;
     color: black;
     font-family: 'Karla'; font-size: 18px;
     display: flex;
@@ -98,6 +113,7 @@ p {
 .body-div-dark-mode {
     background-color:#1F2937;
     color: #D5D4D8;
+    border: 2px solid #10B981;
 }
 
 button {
@@ -105,8 +121,8 @@ button {
     color: white;
     border: none;
     border-radius: 5px;
-    margin-bottom: 20px;
-    height: 50px;
+    margin-bottom: 10px;
+    min-height: 40px;
     width: 250px;
     font-weight:900;
 }
@@ -133,12 +149,13 @@ button:hover {
     width: 100px;
     height: 29px;
     background-color: #1F2937;
-    color: #D5D4D8;
+    color: white;
     font-weight:900;
 }
 
 .theme-button:hover {
     background-color: #18212e;
+    
 }
 
 .theme-button-dark {
